ecmascript/parser/tests/test262-error-references/fail/ba2d36d35efa68ec.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/ba2d36d35efa68ec.js:1:6
  |
1 | a -->
  |      ^

